# customer-support-agent

./: .gitignore  docker-compose.yml
backend/: .gitignore  main.py  pyproject.toml
backend/src/api/: app.py  router.py  schemas.py
backend/src/config/: __init__.py  settings.py
backend/src/db/: database.py  models.py
backend/src/rag/: document_processor.py  embeddings.py  rag_query.py  vector_store.py
backend/src/system/: logger.py
