[project]
name = "customer-support-agent"
version = "0.1.0"
description = "A customer support agent that answers FAQ's and raises support ticket"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "typing-extensions>=4.15.0",
]
